# jwbuddy

./: .gitignore  README.md
backend/: pyproject.toml
backend/skills/sample/: __init__.py  skill.yaml
backend/src/jwbuddy/: __init__.py  config.py  main.py
backend/src/jwbuddy/agent/: __init__.py  memory.py  orchestrator.py  planner.py  runtime.py
backend/src/jwbuddy/api/: __init__.py  admin.py  chat.py  session.py
backend/src/jwbuddy/data/: __init__.py  connection.py  schema.py  security.py
backend/src/jwbuddy/llm/: __init__.py  backends.py  gateway.py
backend/src/jwbuddy/mcp/: __init__.py  client.py  protocol.py  server.py
backend/src/jwbuddy/security/: __init__.py  audit.py
backend/src/jwbuddy/skills/: __init__.py  loader.py  manager.py
backend/src/jwbuddy/tools/: __init__.py  base.py  chart.py  document.py  registry.py  sql_query.py
backend/tests/: test_agent_runtime.py  test_api.py  test_audit.py  test_chart_tool.py  test_data_schema.py  test_document_tool.py  test_e2e.py  test_llm_gateway.py  test_main.py  test_mcp.py  test_orchestrator.py  test_skill_loader.py  test_sql_query.py  test_tool_registry.py
cli/src/jwb/: __main__.py  cli.py  client.py
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/api/: client.ts
desktop/src/components/: ChartRenderer.tsx  ChatPanel.tsx  DataSourceDialog.tsx  DataTable.tsx  HistorySidebar.tsx  MessageBubble.tsx
desktop/src/hooks/: useChat.ts  useSession.ts
docs/: deployment.md
(+2 files in other folders)
