[project]
name = "jwbuddy"
version = "0.1.0"
description = "纪检监察智能体客户端平台"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.50.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.12",
    "sse-starlette>=2.1.0",
    "rich>=13.9.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.3.0", "langgraph>=0.2.0", "langchain-openai>=0.2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "httpx",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
